--- a/Gallery.html
+++ b/Gallery.html
@@ -48,7 +48,6 @@
             <ul class="nav flex-wrap justify-content-center" style="gap: 18px; font-size: 0.9rem;">
                 <li class="nav-item"><a class="nav-link" href="erapenjajahan.html">ERA PENJAJAHAN</a></li>
                 <li class="nav-item"><a class="nav-link" href="awalkemerdekaan.html">AWAL KEMERDEKAAN</a></li>
-               
                 <li class="nav-item"><a class="nav-link" href="hukj3ewij.html">HUKUM DAN KASUS</a></li>
                 <li class="nav-item"><a class="nav-link" href="jalankristus.html">JALAN KRISTUS</a></li>
                 <li class="nav-item"><a class="nav-link active" href="gallery.html">GALLERY</a></li>
@@ -56,11 +55,12 @@
         </div>
     </nav>
 
+    <!-- MAIN CONTENT -->
     <div class="container my-4">
 
         <h1 class="text-center mb-4">Gallery</h1>
 
-        <!-- 6 SECTION GAMBAR -->
+        <!-- IMAGE SECTIONS -->
         <div class="row g-4">
 
             <div class="col-12">
@@ -125,16 +125,28 @@
 
         </div>
 
-        <!-- VIDEO SECTION -->
+        <!-- YOUTUBE VIDEO SECTION -->
         <div class="row my-5">
             <div class="col">
                 <div class="section-video text-center">
                     <h2 class="mb-3">Video</h2>
 
-                    <video width="100%" height="450" controls style="border-radius: 10px;">
-                        <source src="WhatsApp Video 2025-11-25 at 21.28.12_3e443984.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
+                    <!-- EMBED YOUTUBE -->
+                    <iframe width="100%" height="450"
+                        src="https://youtu.be/pjVkjgp0LpY?si=skC8a-BQmS3dW1D-"
+                        title="YouTube video player" frameborder="0"
+                        style="border-radius: 10px;"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                    </iframe>
+
+                    <!-- WATCH NOW BUTTON -->
+                    <a href="https://youtu.be/pjVkjgp0LpY?si=skC8a-BQmS3dW1D-" target="_blank"
+                        style="display:inline-block; margin-top:25px; background:#E62727; 
+                        color:white; padding:12px 25px; border-radius:8px; 
+                        text-decoration:none; font-weight:bold;">
+                        Watch Now on YouTube
+                    </a>
 
                 </div>
             </div>
@@ -144,3 +156,4 @@
 
 </body>
 </html>
+
